// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with application.json 1`] = `
Object {
  "application": Object {
    "host": "prod.app.json",
    "json": true,
    "mongoose": Object {
      "mongoose": Object {
        "url": "mongo://localhost",
      },
    },
  },
}
`;

exports[`with application.json empty 1`] = `
[LoaderConfigParseError: Error during parsing of file "<TEMP_DIR>/mock-fs-test/test/config/application.json".
    SyntaxError: Unexpected end of JSON input
    ]
`;

exports[`with application.json with nothing 1`] = `
[LoaderConfigParseError: Error during parsing of file "<TEMP_DIR>/mock-fs-test/test/config/application.json".
    SyntaxError: Unexpected end of JSON input
    ]
`;

exports[`with application.yml 1`] = `
Object {
  "application": Object {
    "host": "prod.app.yml",
    "mongoose": Object {
      "mongoose": Object {
        "url": "mongo://localhost",
      },
    },
    "yml": true,
  },
}
`;

exports[`with application.yml empty 1`] = `Object {}`;

exports[`with application.yml load application.yml 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
  "testPath": "<TEMP_DIR>/mock-fs-test/test/config/test.json",
}
`;

exports[`with application.yml load with bad profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
  "testPath": "<TEMP_DIR>/mock-fs-test/test/config/test.json",
}
`;

exports[`with application.yml load with prod profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "prod.app.com",
  },
  "testPath": "<TEMP_DIR>/mock-fs-test/test/config/test.json",
}
`;

exports[`with application.yml with bad handler must throw error 1`] = `[Error: ENOENT: no such file or directory, open '<TEMP_DIR>/mock-fs-test/test/config/test.json']`;

exports[`with application.yml with nothing 1`] = `Object {}`;

exports[`with bad application.json 1`] = `
[LoaderConfigParseError: Error during parsing of file "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/badjson/application.json".
    SyntaxError: Unexpected token } in JSON at position 10
    ]
`;

exports[`with bad application.yml 1`] = `
[LoaderConfigParseError: Error during parsing of file "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/badyml/application.yml".
    YAMLException: can not read a block mapping entry; a multiline key may not be an implicit key at line 7, column 1:
    
    ^
    ]
`;

exports[`with bad loader 1`] = `[LoaderConfigPgkNotInstalledError: BadLoader package has not been found installed. Try to install it: npm install BadLoader --save or yarn add BadLoader]`;

exports[`with bad parser 1`] = `[ParserNotSupportedError: The parser "badparser" is not supported by Gabliam]`;

exports[`with bad toml 1`] = `
[LoaderConfigParseError: Error during parsing of file "<TEMP_DIR>/mock-fs-test/test/config/application.toml".
    TomlError: Unknown character "59" at row 2, col 1, pos 2:
1: 
2> ;;;;[application]
   ^
3: host = "127.0.0.1"


    ]
`;

exports[`with config folder doesn't exist 1`] = `Object {}`;

exports[`with json and yml 1`] = `
Object {
  "application": Object {
    "host": "prod.app.yml",
    "json": true,
    "mongoose": Object {
      "mongoose": Object {
        "url": "mongo://localhost",
      },
    },
    "yml": true,
  },
}
`;

exports[`with properties 1`] = `
Object {
  "application.db": "test",
  "application.host": "127.0.0.1",
  "testPath": "<TEMP_DIR>/mock-fs-test/test/config/test.json",
}
`;

exports[`with toml 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
    "testPath": "<TEMP_DIR>/mock-fs-test/test/config/test.json",
  },
}
`;

exports[`with yml and json 1`] = `
Object {
  "application": Object {
    "host": "prod.app.json",
    "json": true,
    "mongoose": Object {
      "mongoose": Object {
        "url": "mongo://localhost",
      },
    },
    "yml": true,
  },
}
`;
